--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: "3.8"
 
+
 services:
   site:
     image: jekyll/jekyll
-    command: jekyll serve
+    command: "jekyll serve"
     volumes: 
       - .:/srv/jekyll
     ports:
       - 4000:4000
     environment:
-      JEKYLL_ENV: production
-
-
+      JEKYLL_ENV: development
