--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: "3.8"
 services:
   site:
     image: jekyll/jekyll
-    command: jekyll serve
+    command: "jekyll serve"
     volumes: 
       - .:/srv/jekyll
+      - ./vendor/bundle:/usr/local/bundle
     ports:
       - 4000:4000
     environment:
