--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Billy's blog
 email: princebillygk@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Revision your programming lanuage knowledge. Come to here before starting a new project to refresh your knowledge.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/myblogs" # the subpath of your site, e.g. /blog
+url: "https://princebillygk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: princebillygk
 github_username: princebillygk
 
