--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: "3.8"
 services:
   site:
     image: jekyll/jekyll
-    command: "jekyll serve"
+    command: bash -c "bundle update && jekyll serve"
     volumes: 
       - .:/srv/jekyll
       - ./vendor/bundle:/usr/local/bundle
     ports:
       - 4000:4000
     environment:
-      JEKYLL_ENV: production
+      JEKYLL_ENV: development
 
 
