--- a/_config.yml
+++ b/_config.yml
@@ -19,18 +19,29 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Billy's blog
+author: Prince Billy Graham Karmoker
 email: princebillygk@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Revision your programming lanuage knowledge. Come to here before starting a new project to refresh your knowledge.
+  Revision your programming language knowledge. Come here before starting a new project to refresh your knowledge.
 baseurl: "/myblogs" # the subpath of your site, e.g. /blog
 url: "https://princebillygk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: princebillygk
+
+# social
 github_username: princebillygk
+linkedin_username: princebillygk
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+# comment enable
+disqus:
+  shortname: billys-blog-1
+
+## header navigation configure
+header_pages: 
+  - about.markdown
 
 exclude:
   - .sass-cache/
