--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ plugins:
  - jekyll-feed
  - jekyll-seo-tag
 
+sass:
+  sass_dir: _sass
+  style: compressed
+
 # comment enable
 disqus:
   shortname: billys-blog-1
