--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
-version: "3.8"
+version: "3"
 
 services:
-  site:
-    image: jekyll/jekyll
-    command: jekyll serve
-    volumes: 
-      - .:/srv/jekyll
-      - ./vendor/bundle:/usr/local/bundle
-    ports:
-      - 4000:4000
-    environment:
-      JEKYLL_ENV: development
+        site:
+                image: jekyll/jekyll
+                command: jekyll serve --port 4001 --livereload --verbose
+                ports:
+                        - 4001:4001
+                volumes: 
+                      - .:/srv/jekyll
+                      - ./vendor/bundle:/usr/local/bundle
 
 
